--- a/index.html
+++ b/index.html
@@ -7,7 +7,38 @@
     <title>AI Daily Challenge Generator</title>
   </head>
   <body>
-    <h1>Welcome to the AI Daily Challenge Generator</h1>
+    <header>
+      <h1>AI Daily Challenge Generator</h1>
+    </header>
+    <main>
+      <form>
+        <input
+          type="text"
+          placeholder="Enter any word to inspire today's challenge... "
+          autofocus
+          required
+          autocomplete="off"
+        />
+        <input type="Submit" />
+        <div>
+          🌼 Example with keyword flower
+          <br />
+          Title: Bloom Where You Are 🌸
+          <br />
+          🌸 Effort & Time: Easy · 15 min
+          <br />
+          Challenge:
+          <br />
+          Find a flower today — in nature, in art, or even in memory. Pause and
+          sketch or photograph it. Then write one line about what it teaches you
+          about resilience.
+          <br />
+          Completion:
+          <br />
+          ✅ You captured beauty and turned it into a personal lesson.
+        </div>
+      </form>
+    </main>
     <footer>
       This AI project was coded by
       <a href="https://github.com/Lfaliji" target="_blank">Chadia Lfaliji</a>
