--- a/index.html
+++ b/index.html
@@ -3,24 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="src/style.css" />
     <title>AI Daily Challenge Generator</title>
   </head>
   <body>
-    <header>
-      <h1>AI Daily Challenge Generator</h1>
-    </header>
-    <main>
-      <form>
-        <input
-          type="text"
-          placeholder="Enter any word to inspire today's challenge... "
-          autofocus
-          required
-          autocomplete="off"
-        />
-        <input type="Submit" />
-        <div>
+    <div class="container">
+      <header>
+        <h1>AI Daily Challenge Generator</h1>
+      </header>
+      <main>
+        <form>
+          <input
+            type="text"
+            placeholder="Enter any word to inspire today's challenge... "
+            autofocus
+            required
+            autocomplete="off"
+            class="instructions"
+          />
+          <input type="Submit" class="submit-button" />
+        </form>
+        <div class="daily-challenge">
           🌼 Example with keyword flower
           <br />
           Title: Bloom Where You Are 🌸
@@ -37,22 +46,22 @@
           <br />
           ✅ You captured beauty and turned it into a personal lesson.
         </div>
-      </form>
-    </main>
-    <footer>
-      This AI project was coded by
-      <a href="https://github.com/Lfaliji" target="_blank">Chadia Lfaliji</a>
-      and is
-      <a
-        href="https://github.com/Lfaliji/daily-challenge-generator"
-        target="_blank"
-        >open-sourced on GitHub</a
-      >
-      and is hosted on
-      <a href="https://daily-challenge-generator.netlify.app" target="_blank"
-        >Netlify</a
-      >.
-    </footer>
+      </main>
+      <footer>
+        This AI project was coded by
+        <a href="https://github.com/Lfaliji" target="_blank">Chadia Lfaliji</a>
+        and is
+        <a
+          href="https://github.com/Lfaliji/daily-challenge-generator"
+          target="_blank"
+          >open-sourced on GitHub</a
+        >
+        and is hosted on
+        <a href="https://daily-challenge-generator.netlify.app" target="_blank"
+          >Netlify</a
+        >.
+      </footer>
+    </div>
     <script src="src/index.js"></script>
   </body>
 </html>
